# brutucs

./: .clang-format  .clang-tidy  README.md  meson.build
.github/workflows/: main.yml
src/: brutucs.cpp  meson.build
src/address/: address-generator.h  address-store.h  address.h  memory-address-store.cpp  memory-address-store.h  p2pkh-address-generator.cpp  p2pkh-address-generator.h
src/base58/: base58.cpp  base58.h
src/random/: linux-random.cpp  linux-random.h  pseudo-random.cpp  pseudo-random.h  random.h
subprojects/: catch2.wrap
test/: base58-test.cpp  linux-random-test.cpp  meson.build  p2pkh-address-generator-test.cpp  pseudo-random-test.cpp
test/mocks/: mock-random.cpp  mock-random.h
